# tauri-app

./: README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  event_log.csv  tauri.conf.json
src-tauri/src/: main.rs
src/components/ui/: button.tsx
